# gitcat

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  command.rs  config.rs  error.rs  main.rs
src/git/: mod.rs  status.rs
