[package]
name = "gitcat"
version = "0.1.0"
authors = ["Arjav Jain<arjavjain0703@gmail.com"]
description = "A cute wrapper around the git CLI"
license = "MIT"
repository = "https://github.com/arjavjain/gitcat"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.53", features = ["derive"]}
colored = "3.0.0"
dirs = "6.0.0"
regex = "1.12.2"
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
